<?xml version="1.0" encoding="utf-8"?>
<!--
 * @author George Bell
 * @version 1.0
 * @since 25/01/2021
-->
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <ImageView
        android:id="@+id/ivInfo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:padding="10dp"
        android:src="@drawable/ic_info" />

    <TextView
        android:id="@+id/tvFaces"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="BEFORE FACES"
        android:textSize="35dp"
        android:padding="15dp"/>

    <ImageView
        android:id="@+id/ivAddFace"
        android:layout_width="70dp"
        android:layout_height="70dp"
        android:layout_below="@id/tvFaces"
        android:layout_toRightOf="@+id/spinnerID"
        android:padding="3dp"
        android:src="@drawable/ic_add_face">
    </ImageView>

    <Spinner
        android:id="@+id/spinnerID"
        android:layout_width="250dp"
        android:layout_height="70dp"
        android:background="@android:drawable/btn_dropdown"
        android:spinnerMode="dropdown"
        android:layout_below="@id/tvFaces"
        />


    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recycler_view"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/spinnerID">
    </androidx.recyclerview.widget.RecyclerView>
</RelativeLayout>