<?xml version="1.0" encoding="utf-8"?>
<!--
 * @author George Bell
 * @version 1.0
 * @since 25/01/2021
-->
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="350dp"
    android:layout_height="475dp"
    android:background="#D3D3D3"
    android:layout_gravity="center"
    android:padding="5dp"
    android:layout_marginLeft = "15dp"
    android:layout_marginRight="15dp">

    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/ivNewFace"
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:src="@mipmap/ic_launcher"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="50dp"/>

    <ImageView
        android:id="@+id/ivAddPicture"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:src="@drawable/ic_add_picture"
        android:layout_alignParentRight="true"
        android:layout_marginTop="50dp"
        android:layout_marginRight="75dp"/>

    <EditText
        android:id="@+id/etEditImageName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textPersonName"
        android:layout_centerHorizontal="true"
        android:layout_below="@id/ivNewFace"
        android:layout_marginTop="20dp"/>

    <Spinner
        android:id="@+id/spinnerAddID"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:background="@android:drawable/btn_dropdown"
        android:spinnerMode="dropdown"
        android:layout_centerHorizontal="true"
        android:layout_below="@+id/etEditImageName"/>

    <Button
        android:id="@+id/btnAddNewFace"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="#67656A"
        android:text="Add Face"
        android:textColor="#F2EFF4"
        android:layout_marginLeft="10dp"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="25dp"
         />

    <Button
        android:id="@+id/btnCancelAddNewFace"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Cancel"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="25dp"
        android:layout_toRightOf="@id/btnAddNewFace"
        android:layout_marginLeft="150dp"
        />
</RelativeLayout>