<?xml version="1.0" encoding="utf-8"?>
<!--
 * @author George Bell
 * @version 1.0
 * @since 25/01/2021
-->
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="350dp"
    android:layout_height="475dp"
    android:background="#D3D3D3"
    android:layout_gravity="center"
    android:padding="5dp">

    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/ivPopupImage"
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:src="@mipmap/ic_launcher"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="50dp"/>

    <TextView
        android:id="@+id/txtClose"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="X"
        android:layout_alignParentRight="true"
        android:padding="10dp"/>

    <EditText
        android:id="@+id/etEditImageName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textPersonName"
        android:layout_centerHorizontal="true"
        android:layout_below="@id/ivPopupImage"
        android:layout_marginTop="20dp" />

    <ImageView
        android:id="@+id/ivPopUpDelete"
        android:layout_width="58dp"
        android:layout_height="64dp"
        android:src="@drawable/ic_delete"
        android:layout_centerHorizontal="true"
        android:layout_below="@+id/etEditImageName"
        android:layout_marginTop="15dp"
        />

    <Button
        android:id="@+id/btnSaveAndClose"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Save &amp; Close"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"/>

</RelativeLayout>