<?xml version="1.0" encoding="utf-8"?>
<!--
 * @author George Bell
 * @version 1.0
 * @since 25/01/2021
-->
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="15dp"
                android:id="@+id/parent_layout">
    <de.hdodenhof.circleimageview.CircleImageView
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:id="@+id/ivPopupImage"
        android:src="@mipmap/ic_launcher"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Canada"
        android:id="@+id/image_name"
        android:layout_toRightOf="@+id/ivPopupImage"
        android:textColor="#000"
        android:layout_centerVertical="true"
        android:layout_marginLeft="30dp"
        android:textSize="17dp"/>

    <ImageView
        android:id="@+id/ivEdit"
        android:layout_width="41dp"
        android:layout_height="37dp"
        android:layout_centerVertical="true"
        android:layout_marginStart="225dp"
        android:layout_marginLeft="150dp"
        android:layout_toRightOf="@+id/ivPopupImage"
        android:src="@drawable/ic_edit" />





</RelativeLayout>