<?xml version="1.0" encoding="utf-8"?>
<!--
 * @author George Bell
 * @version 1.0
 * @since 25/01/2021
-->
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LoginActivity"
    android:layout_marginLeft = "15dp"
    android:layout_marginRight="15dp">

    <TextView
        android:id="@+id/tvAppName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Smart Doorbell"
        android:textSize="36sp"
        android:textStyle="bold"
        android:layout_marginTop="35dp"
        android:padding="10dp"
        />

    <TextView
        android:id="@+id/tvLogin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/tvAppName"
        android:layout_marginTop="80dp"
        android:padding="15dp"
        android:text="Sign In"
        android:textSize="24sp" />

    <EditText
        android:id="@+id/etUsername"
        android:layout_width="275dp"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="Username"
        android:inputType="textPersonName"
        android:layout_below="@+id/tvLogin"
        android:padding="15dp"
        android:layout_marginTop="25dp"/>

    <EditText
        android:id="@+id/pwdPassword"
        android:layout_width="275dp"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="Password"
        android:padding="15dp"
        android:inputType="textPassword"
        android:layout_marginTop="25dp"
        android:layout_below="@+id/etUsername" />

    <TextView
        android:id="@+id/tvInformation"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="15dp"
        android:layout_below="@+id/pwdPassword"
        android:layout_marginTop="50dp" />

    <TextView
        android:id="@+id/tvGoToSignUp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Sign Up"
        android:padding="15dp"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="25dp"
         />

    <Button
        android:id="@+id/btnLogin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Sign In"
        android:padding="15dp"
        android:layout_alignParentRight="true"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="25dp"
        />
</RelativeLayout>