...
        android:textStyle="bold"
        android:layout_marginTop="35dp"
        android:padding="10dp"
         />

    <TextView
        android:id="@+id/tv2FA"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Two Factor Authentication"
        android:textSize="24sp"
        android:layout_below="@id/tvAppName"
        android:layout_marginTop="50dp"
...
