...
        android:textSize="36sp"
        android:textStyle="bold"
        android:layout_marginTop="35dp"
        android:padding="10dp"/>

    <TextView
        android:id="@+id/tvSignUp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Create An Account"
        android:textSize="24sp"
        android:layout_below="@id/tvAppName"
        android:layout_marginTop="40dp"
...
